@@ -1,3 +1,7 @@
+2005-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* newweb.css (a): increase border-spacing.
+
 2005-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/images/ubuntu.png: Add.
